<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GetDevice"
            android:id="@+id/btngetdevice"
            android:onClick="onbtngetdeviceonClick" />

        <TextView android:text="@string/DeviceName" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvdevicename" />

        <TextView
            android:text="@string/VendorId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvvendorid" />

        <TextView
            android:text="@string/ProductId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvproductid" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etdata"
            android:inputType="text" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SendData"
            android:id="@+id/btnsend"
            android:onClick="onbtnsendClick" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_alignRight="@+id/editText"
                android:layout_alignEnd="@+id/editText" />
        </ScrollView>
    </LinearLayout>

</RelativeLayout>
